New in master
=============

Features
--------

* Added Marathi translation

Bugfixes
--------

* Fix handling of duplicate plugins on Windows
* Allow else clause in post-list plugin. (Issue #3436)

New in v8.1.1
=============

Bugfixes
--------

* Default to no line numbers in code blocks, honor CodeHilite
  requesting no line numbers. Listing pages still use line numbers
  (Issue #3426)
* Remove duplicate MathJax config in bootstrap themes (Issue #3427)
* Fix ``doit`` requirement to ``doit>=0.32.0`` (Issue #3422)

New in v8.1.0
=============

Features
--------

* Support posts without titles (Issue #3408)
* Support WebP image scaling (Issue #3399)
* Use Luxon instead of Moment for fancy dates to make it more
  lightweight, going from 328k to 68k (Issue #3232)
* New ``nikola console -s script.py`` option to run scripts that
  access your site (Issue #3385)
* Allow preview images to be relative to posts for bootblog4 featured
  posts
* Change the listings formatting to support word wrap with line
  numbers and improve appearance
* Put the current language’s feed links first so that feed readers
  prefer it (Issue #3248)
* Added support for default preview image for posts (Issue #3326)
* Added support for thumbnails in gallery lists (Issue #1771)

Bugfixes
--------

* Support directory names in ``REDIRECTIONS`` (Issue #3421)
* Return a non-zero error code when ``nikola github_deploy`` fails
* Refactored scale_image causing performance increasing in image
  resizing.
* Don’t force absolute links for brand/languages (Issue #3229)
* Fix RTL mirroring in base theme (``:dir()`` pseudo-class is Firefox only)
  (Issue #3353)
* Work around Bootstrap 4 alignment bug for RTL languages
  (Issue #3353)
* Handle multiple level of inherit/import nesting in Mako templates
  correctly (Issue #3349)
* Output a more informative error when files are missing due to
  broken symlinks or incorrect ``TRANSLATIONS_PATTERN`` values